feat:完成users api 文檔
