# controllers/userController.js
@@ -1,3 +1,4 @@
+const sequelize = require('sequelize')
 const model = require('../models')
 const User = model.User
 
@@ -7,7 +8,6 @@ const getAllUser = async (req, res) => {
 }
 
 const getUserById = async (req, res) => {
-  // TODO 處理沒有id
   const user = await User.findOne({
     where: {
       id: req.params.id,
@@ -21,81 +21,142 @@ const getUserById = async (req, res) => {
       'introduction',
       'avatar',
     ],
-    include: [
-      {
-        model: model.Tweet,
-      },
-      {
-        model: model.Reply,
-        include: model.Tweet,
-      },
-      {
-        model: model.Like,
-        include: model.Tweet,
-      },
-    ],
-    order: [
-      [model.Tweet, 'createdAt', 'DESC'],
-      [model.Reply, 'createdAt', 'DESC'],
-      [model.Like, 'createdAt', 'DESC'],
-    ],
   })
+  if (!user) {
+    return res.status(400).json({ message: '查無此帳號' })
+  }
   res.json(user)
 }
 
 const getUserTweets = async (req, res) => {
-  // TODO 錯誤處理
-  const user = await User.findOne({
-    where: {
-      id: req.params.id,
+  const tweets = await model.Tweet.findAll({
+    where: { UserId: req.params.id },
+    attributes: {
+      include: [
+        [
+          sequelize.literal(
+            '(SELECT COUNT(id) FROM Replies WHERE Replies.TweetId = Tweet.id)'
+          ),
+          'replyCount',
+        ],
+        [
+          sequelize.literal(
+            '(SELECT COUNT(id) FROM Likes WHERE Likes.TweetId = Tweet.id)'
+          ),
+          'likeCount',
+        ],
+      ],
+      exclude: ['UserId'],
     },
-    include: model.Tweet,
+    include: [
+      {
+        model: model.User,
+        attributes: ['id', 'account', 'name', 'avatar'],
+      },
+    ],
+    order: [['createdAt', 'DESC']],
   })
-  res.json(user.Tweets)
+  res.json(tweets)
 }
 
 const getUserTweetsReply = async (req, res) => {
-  // TODO 錯誤處理
-  const user = await User.findOne({
-    where: {
-      id: req.params.id,
+  const tweets = await model.Tweet.findAll({
+    attributes: {
+      include: [
+        [
+          sequelize.literal(
+            '(SELECT COUNT(id) FROM Replies WHERE Replies.TweetId = Tweet.id)'
+          ),
+          'replyCount',
+        ],
+        [
+          sequelize.literal(
+            '(SELECT COUNT(id) FROM Likes WHERE Likes.TweetId = Tweet.id)'
+          ),
+          'likeCount',
+        ],
+      ],
+      exclude: ['UserId'],
     },
-    include: model.Reply,
+    include: [
+      {
+        model: model.Reply,
+        where: { UserId: req.params.id },
+        attributes: [],
+      },
+      {
+        model: model.User,
+        attributes: ['id', 'account', 'name', 'avatar'],
+      },
+    ],
+    order: [['createdAt', 'DESC']],
   })
-  res.json(user.Replies)
+  res.json(tweets)
 }
 
 const getUserLikes = async (req, res) => {
-  // TODO 錯誤處理
-  const user = await User.findOne({
-    where: {
-      id: req.params.id,
+  const tweets = await model.Tweet.findAll({
+    attributes: {
+      include: [
+        ['id', 'TweetId'],
+        [
+          sequelize.literal(
+            '(SELECT COUNT(id) FROM Replies WHERE Replies.TweetId = Tweet.id)'
+          ),
+          'replyCount',
+        ],
+        [
+          sequelize.literal(
+            '(SELECT COUNT(id) FROM Likes WHERE Likes.TweetId = Tweet.id)'
+          ),
+          'likeCount',
+        ],
+      ],
+      exclude: ['UserId'],
     },
-    include: model.Like,
+    include: [
+      {
+        model: model.Like,
+        where: { UserId: req.params.id },
+        attributes: [],
+      },
+      {
+        model: model.User,
+        attributes: ['id', 'account', 'name', 'avatar'],
+      },
+    ],
+    order: [['createdAt', 'DESC']],
   })
-  res.json(user.Likes)
+  res.json(tweets)
 }
 
 const getUserFollowings = async (req, res) => {
-  // TODO 錯誤處理
   const followship = await model.Followship.findAll({
+    raw: true,
     where: {
       followerId: req.params.id,
     },
-    include: { model: model.User, as: 'Followings' },
+    attributes: ['followingId'],
+    include: {
+      model: model.User,
+      as: 'Followings',
+      attributes: ['account', 'name', 'avatar'],
+    },
   })
   res.json(followship)
 }
 
 const getUserFollowers = async (req, res) => {
-  // TODO 錯誤處理
   const followship = await model.Followship.findAll({
+    raw: true,
     where: {
       followingId: req.params.id,
     },
+    attributes: ['followerId'],
     include: {
       model: model.User,
       as: 'Followers',
+      attributes: ['account', 'name', 'avatar'],
     },
   })
   res.json(followship)
@@ -103,12 +164,25 @@ const getUserFollowers = async (req, res) => {
 
 const updateUserById = async (req, res) => {
   // TODO 錯誤處理
+  // TODO admin帳號才能操作
+  // TODO 考慮不能修改的欄位
   await User.update(req.body, {
     where: {
       id: req.params.id,
     },
   })
   res.sendStatus(200)
+}
+
+const getMyInfo = async (req, res) => {
+  res.json({
+    id: req.user.id,
+    account: req.user.account,
+    name: req.user.name,
+    email: req.user.email,
+    role: req.user.role,
+    avatart: req.user.avatar,
+  })
 }
 
 module.exports = {
@@ -120,4 +194,5 @@ module.exports = {
   getUserFollowings,
   getUserFollowers,
   updateUserById,
+  getMyInfo,
 }
